--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   ],
   "dependencies": {
     "coffee-script": "~1.9.0",
-    "ws": "0.4.31",
-    "log": "1.4.0"
+    "lodash": "^3.10.0",
+    "log": "1.4.0",
+    "path": "^0.11.14",
+    "ws": "0.4.31"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
