--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "slack"
   ],
   "dependencies": {
+    "address-validator": "^0.1.4",
     "coffee-script": "~1.9.0",
     "lodash": "^3.10.0",
     "log": "1.4.0",
     "path": "^0.11.14",
+    "q": "^1.4.1",
     "ws": "0.4.31"
   },
   "devDependencies": {
