--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "coffee-script": "~1.9.0",
     "lodash": "^3.10.0",
     "log": "1.4.0",
+    "md5": "^2.0.0",
+    "mysql": "^2.8.0",
     "path": "^0.11.14",
     "q": "^1.4.1",
+    "sequelize": "^3.5.1",
     "ws": "0.4.31"
   },
   "devDependencies": {
