--- a/package.json
+++ b/package.json
@@ -12,14 +12,38 @@
   ],
   "dependencies": {
     "address-validator": "^0.1.4",
+    "body-parser": "^1.13.2",
     "coffee-script": "~1.9.0",
+    "compress": "^0.99.0",
+    "compression": "^1.5.2",
+    "connect-flash": "^0.1.1",
+    "connect-timeout": "^1.6.2",
+    "consolidate": "^0.13.1",
+    "cookie-parser": "^1.3.5",
+    "cookie-session": "^1.2.0",
+    "csurf": "^1.8.3",
+    "errorhandler": "^1.4.2",
+    "express": "^4.13.1",
+    "express-session": "^1.11.3",
+    "forever": "^0.15.1",
+    "grunt-contrib-less": "^1.0.1",
+    "helmet": "^0.10.0",
+    "jade": "^1.11.0",
     "lodash": "^3.10.0",
     "log": "1.4.0",
     "md5": "^2.0.0",
+    "method-override": "^2.3.4",
+    "morgan": "^1.6.1",
     "mysql": "^2.8.0",
     "path": "^0.11.14",
     "q": "^1.4.1",
+    "response-time": "^2.3.1",
     "sequelize": "^3.5.1",
+    "serve-favicon": "^2.3.0",
+    "serve-index": "^1.7.2",
+    "serve-static": "^1.10.0",
+    "vhost": "^3.0.1",
+    "view-helpers": "^0.1.5",
     "ws": "0.4.31"
   },
   "devDependencies": {
