--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "log": "1.4.0",
     "md5": "^2.0.0",
     "method-override": "^2.3.4",
+    "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "mysql": "^2.8.0",
     "path": "^0.11.14",
@@ -42,6 +43,7 @@
     "serve-favicon": "^2.3.0",
     "serve-index": "^1.7.2",
     "serve-static": "^1.10.0",
+    "stripe": "^3.7.0",
     "vhost": "^3.0.1",
     "view-helpers": "^0.1.5",
     "ws": "0.4.31"
