--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
   "engines": {
     "node": ">= 0.10.x",
     "npm": ">= 1.1.x"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
