--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A Slack Bot",
   "main": "./index",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register --reporter spec",
-    "prepublish": "grunt prepublish"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "keywords": [
     "slack"
@@ -13,6 +12,7 @@
   "dependencies": {
     "address-validator": "^0.1.4",
     "body-parser": "^1.13.2",
+    "bower": "^1.4.1",
     "coffee-script": "~1.9.0",
     "compress": "^0.99.0",
     "compression": "^1.5.2",
@@ -60,8 +60,5 @@
   "engines": {
     "node": ">= 0.10.x",
     "npm": ">= 1.1.x"
-  },
-  "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
