--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "grunt-contrib-less": "^1.0.1",
     "helmet": "^0.10.0",
     "jade": "^1.11.0",
-    "lodash": "^3.10.0",
+    "json2csv": "^2.8.2",
+    "lodash": "^3.10.1",
     "log": "1.4.0",
     "md5": "^2.0.0",
     "method-override": "^2.3.4",
     "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "mysql": "^2.8.0",
+    "nodemailer": "^1.4.0",
+    "nodemailer-smtp-transport": "^1.0.3",
     "path": "^0.11.14",
     "q": "^1.4.1",
     "response-time": "^2.3.1",
